# markdown-studio

./: .gitignore  LICENSE  README.md  cspell.json  env.d.ts  index.html  markdown-studio.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: generate-icons.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CommandPalette.vue
src/components/ai/: AIChatPanel.vue
src/components/editor/: MarkdownEditor.vue  MarkdownToolbar.vue
src/components/layout/: SideBar.vue  StatusBar.vue  TabBar.vue  TitleBar.vue
src/components/plugins/: PluginManager.vue
src/components/publishing/: PublishPanel.vue
src/components/sidebar/: BacklinksPanel.vue  FileExplorer.vue  GitPanel.vue  OutlinePanel.vue
src/router/: index.ts
src/stores/: editor.ts  git.ts  graph.ts  ui.ts  workspace.ts
src/styles/: global.scss
src/types/: index.ts
src/utils/: markdown.ts  plugin-api.ts
src/views/: EditorView.vue  GraphView.vue  SearchView.vue  SettingsView.vue
